Fixes bug in edge case of pledging form when no more pledges allowed.  Due to the pledged amount was shown utilizing the pledge amount input model, side effects were visible. The fix is to not use the pledge amount input model for displaying the user's pledged amount in the edge case so that angular's update cycles do not mess up the model and its depending values.

--- a/crowdsource-frontend/src/main/scss/components/_finance.scss
+++ b/crowdsource-frontend/src/main/scss/components/_finance.scss
@@ -144,6 +144,7 @@
 
         &:hover {
             background-image: none;
+            cursor: default;
         }
     }
 
